# jp-csv-training

./: Cargo.toml  readme.org  rustfmt.toml  testing.csv
src/: cli.rs  csv_struct.rs  main.rs  training.rs
